styles/todos.scss
main {
  width: 90%;
  margin: 5em 2em;

  .todo-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 1em;

    .todo-nav-left {
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: white;
      padding: .4em;
      padding-right: 1em;
      padding-left: 1em;
      opacity: 0.7;
      border-radius: 25px;
      gap: .5em;
      font-size: 1.5em;
      color: #002448;
      height: 1.9em;
      min-width: 180px;

      &:hover {
        box-shadow: 6px 4px 9px #635197;
      }
    }

    form {
      display: flex;
      align-items: center;
      background-color: white;
      padding: 0.5em 1em 0.5em 1em;
      opacity: 0.7;
      border-radius: 25px;
      width: 60%;

      #searchBox {
        // width: 10em;
        border: none;
        outline: none;
        padding: 0.3em 0 0.3em 2em;
        margin: 0;
        height: 1em;

        &:focus {
          box-shadow: none;
          -webkit-box-shadow: none;
        }
      }

      i {
        position: absolute;
        padding: 0.3em;
      }

      &:hover {
        box-shadow: 6px 4px 9px #635197;
      }
    }

    .todo-nav-right {
      display: flex;
      justify-content: space-between;
      align-items: center;
      background-color: white;
      padding: .5em;
      padding-right: 1em;
      padding-left: 1em;
      opacity: 0.7;
      border-radius: 25px;
      gap: .56em;
      font-size: 1.5em;
      color: #002448;


      &:hover {
        box-shadow: 6px 4px 9px #635197;
      }

      // Category icons
      i {
        cursor: pointer;

        &:hover {
          color: #722dfc;
        }
      }
    }
  }

  .todolist {
    background-color: white;
    padding: 1em;
    padding-right: 1em;
    padding-left: 1em;
    opacity: 0.7;
    border-radius: 25px;

    &:hover {
      box-shadow: 6px 4px 9px #635197;
    }

    .todo-addTask {
      width: 100%;
      display: flex;
      justify-content: space-between;

      form {
        display: flex;
        align-items: center;

        i {
          position: absolute;
          padding: 0.3em;
        }

        #newTodo {
          width: 18em;
          padding: 0.4em 0 0.3em 2em;
          border: none;
          height: 0.5em;
          margin: 0;

          // Removes outline of new memo bar when adding a new to do note. overrides Materialize framework messiness.
          &:focus {
            outline: none;
            box-shadow: none;
            -webkit-box-shadow: none;
          }
        }

      }
    }

    // TODO container
    #todos-container {
      .todo {
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: space-between;
        width: 100%;
        border-width: 1px 2.5px 2.5px 1px;
        border-style: solid;
        margin: 1em 0;
        padding: 0.1em 1em 0em 1em;
        background-color: white;
        border-radius: 25px;
        // opacity: 0.7;

        &:hover {
          box-shadow: 6px 4px 9px #635197;
        }

        .left-side {
          display: flex;
          justify-content: center;
          align-items: center;
          gap: 0.3em;

          .todo-status {
            font-size: 1.2em;
            cursor: pointer;

            .fa-circle-check {
              color: rgb(140 135 144);
            }
          }

          // Sets the styling for to do task memos on the main page
          .todo-memo {
            .memo-text {
              border: 1px solid transparent;
              padding: 0 0.3em;
              font-size: 1.1em;
              color: #000000DE;

              &:hover {
                border: 1px solid rgb(63, 63, 63);
                cursor: text;
              }
            }

            .completed-todo {
              text-decoration: line-through;
              font-size: inherit;
              color: rgb(140 135 144);
            }

            input {
              border: none;
              height: auto;
              margin: 0;

              // Overrides issues caused by framework Materialize
              &:focus {
                outline: none;
                background-color: rgb(231, 231, 231);
                padding: 2px;
                box-shadow: none;
                height: 1.1em;
              }
            }
          }


        }

        // Responsible for individual to do task categories
        .right-side {
          display: flex;
          justify-content: center;
          align-items: center;

          // TODO Category dropdown
          .todo-category {
            padding: 0 .3em;

            .categories-dropdown {
              padding: 0 0.5em;
              border: none;
              appearance: none;
              color: rgb(63, 63, 63);
              font-size: 1.1em;
              opacity: 10;
              height: 2em;
            }
          }

          .todo-options {
            display: flex;
            gap: 0.5em;
            font-size: 1.2em;

            // Edit and Delete icons
            i {
              color: rgb(63, 63, 63);
              cursor: pointer;

              &:hover {
                color: red;
              }
            }
          }
        }

      }
    }
  }
}

// *** Do Not Touch/Move *** - Hidden nav appears on resize - not a child of the nav bar
.todo-nav-mobileview {
  display: none;
}

input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
  color: black;
  font-size: 1.1em;
}

